# DIT-Pro

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_CN.md  TEST_DEBUG_REPORT_2026-02-28.md  WINDOWS_BUILD.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts
.claude/commands/: release.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pages.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_CN.md  CHANGELOG.md  CHANGELOG_CN.md  MILESTONES.md  MILESTONES_CN.md  RELEASE_GUIDE.md  RELEASE_GUIDE_CN.md  ROADMAP.md  ROADMAP_CN.md
docs/releases/: v1.0.0-beta.3.md  v1.0.0-rc.1.md  v1.0.0-rc.2.md  v1.0.0-rc.3.md  v1.0.0-rc.4.md  v1.0.0.md  v1.0.1.md  v1.1.0-rc.1.md  v1.1.0-rc.2.md  v1.2.0-rc.1.md  v1.3.1-beta.md  v1.3.1.md
e2e/: about-dialog.spec.ts  app-shell.spec.ts  i18n.spec.ts  mhl-verify.spec.ts  navigation.spec.ts  presets.spec.ts  reports.spec.ts  settings.spec.ts  volumes.spec.ts
e2e/fixtures/: app.fixture.ts
e2e/helpers/: selectors.ts
mhl-verify-cli/: Cargo.toml
mhl-verify-cli/src/: main.rs
scripts/: bump-version.sh
src/: App.css  App.tsx  ErrorBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  debug_bundle.rs  error.rs  error_log.rs  lib.rs  preset.rs  report.rs  tray.rs  version.rs
src-tauri/src/camera/: metadata.rs  mod.rs  transcode.rs
src-tauri/src/checkpoint/: mod.rs
src-tauri/src/cloud_sync/: mod.rs
src-tauri/src/copy_engine/: atomic_writer.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/hash_engine/: mod.rs
src-tauri/src/io_scheduler/: mod.rs
src-tauri/src/mhl/: mod.rs  verifier.rs  xml_writer.rs
src-tauri/src/notify/: mod.rs
src-tauri/src/report/: mod.rs
src-tauri/src/rushes_log/: excel.rs  mod.rs  pdf.rs
src-tauri/src/volume/: mod.rs
src-tauri/src/workflow/: mod.rs
src-tauri/tests/: abnormal_scenarios.rs  ac_verification.rs  cascade_stress_tests.rs  command_tests.rs  hash_benchmark.rs  real_device_test.rs  stress_tests.rs
src/components/: SystemLog.tsx
src/i18n/: index.tsx
src/i18n/locales/: en.ts  zh.ts
src/state/: activeJobCount.ts
src/types/: index.ts
src/utils/: audioChimes.ts  mockData.ts  notifications.ts  pathDisplay.ts  tauriCompat.ts
src/views/JobsView/: JobsView.tsx
src/views/MhlVerifyView/: MhlVerifyView.tsx
src/views/PresetsView/: PresetsView.tsx
src/views/ReportView/: ReportView.tsx
src/views/RushesLogView/: RushesLogView.tsx
src/views/SettingsView/: SettingsView.tsx
src/views/VolumeView/: VolumeView.tsx
website/: CNAME  index-v3.html  index.html
website/software/: README.md  latest-beta.json  latest.json
