[package]
name = "dit-pro"
version = "1.3.2"
description = "DIT Pro — Professional Card Offload Engine"
authors = ["William Zhao"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Hash algorithms
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }
sha2 = "0.10"
md-5 = "0.10"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Email notification
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# File system watching
notify = "6"

# Error handling
thiserror = "1"
anyhow = "1"

# HTTP client (update checker)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# XML (for ASC MHL)
quick-xml = { version = "0.31", features = ["serialize"] }
tauri-plugin-process = "2"
tauri-plugin-notification = "2"

# Cloud storage abstraction
opendal = { version = "0.50", features = ["services-s3", "services-webdav"] }

# Excel export (pure Rust, no C deps)
rust_xlsxwriter = "0.79"

# PDF generation
genpdf = { version = "0.2", features = ["images"] }

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
] }
wmi = "0.14"

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
